2005-07-16  Andrew Pinski  <pinskia@physics.uc.edu>

	PR fortran/13257
	* comma_format_extension_[1234].f: New tests.

2005-07-16  Joseph S. Myers  <joseph@codesourcery.com>

	PR c/22421
	* gcc.dg/format/bitfld-1.c: New test.

2005-07-15  Mark Mitchell  <mark@codesourcery.com>

	PR c++/22204
	* g++.dg/rtti/repo1.C: New test.

2005-07-15  Thomas Koenig  <Thomas.Koenig@online.de>

	Backport from mainline.
	PR libfortran/21926
	PR libfortran/18857
	* gfortran.fortran-torture/execute/intrinsic_matmul.f90:
	Test case where the return array has lowest stride one,
	but isn't packed.
	* gfortran.dg/matmul_1.f90: New test.

2005-07-15  Mark Mitchell  <mark@codesourcery.com>

	PR c++/22132
	* g++.dg/expr/cast4.C: New test.

2005-07-15 Paul Brook  <paul@codesourcery.com>

	Backport form mainline.
	2005-06-22 Paul Brook  <paul@codesourcery.com>
	PR fortran/21034
	* gfortran.dg/auto_save_1.f90: New test.

2005-07-14  Thomas Koenig  <Thomas.Koenig@online.de>

	Backport from mainline:
	PR libfortran/21594
	PR libfortran/22144
	PR libfortran/22142
	* gfortran.fortran-torture/execute/intrinsic_eoshift.f90:
	Add test cases where the shift length is greater than the
	array length.
	Add test cases for PR 22142 for eoshift1 and eoshift3.
	* gfortran.dg/shift-alloc.f90:  New testcase.

2005-07-14  Paul Thomas  <pault@gcc.gnu.org>

	PR libfortran/16435
	* gfortran.dg/tl_editting.f90: New.
	* gfortran.dg/g77/f77-edit-x-out.f: Remove XFAIL.

2005-07-14  Paul Thomas  <pault@gcc.gnu.org>

	* gfortran.dg/past_eor.f90: New.
	* gfortran.dg/complex_read.f90: New.

2005-07-14  Jakub Jelinek  <jakub@redhat.com>

	* gfortran.dg/g77/cpp6.f: New test.

	PR fortran/22417
	* gfortran.dg/g77/cpp5.F: New test.
	* gfortran.dg/g77/cpp5.h: New file.
	* gfortran.dg/g77/cpp5inc.h: New file.

2005-07-14  Steven G. Kargl  <kargls@comcast.net>

	* gfortran.dg/char_array_constructor.f90: New test.

2005-07-13  Jeff Law  <law@redhat.com>

	* gcc.dg/tree-ssa/pr22051-2.c: Tweak expected output to allow